syntax = "proto3";

package chat;

service ChatService {
  rpc GetChat (GetChatRequest) returns (Chat);
  rpc CreateChat (CreateChatRequest) returns (Chat);
  rpc GetChats (Empty) returns (ChatList);
}

message Chat {
  int32 id = 1;
}

message GetChatRequest {
  int32 id = 1;
}

message CreateChatRequest {
  int32 id = 1;
}

message ChatList {
  repeated Chat chats = 1;
}

message Empty {}